--- a/KanjiRyokucha/ReviewViewController.xib
+++ b/KanjiRyokucha/ReviewViewController.xib
@@ -38,7 +38,13 @@
                             <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                             <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="44" id="9DQ-vF-J86"/>
+                                <constraint firstAttribute="height" constant="44" id="9DQ-vF-J86" customClass="LayoutConstraint" customModule="KanjiRyokucha" customModuleProvider="target">
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="📱3¨5_const">
+                                            <real key="value" value="34"/>
+                                        </userDefinedRuntimeAttribute>
+                                    </userDefinedRuntimeAttributes>
+                                </constraint>
                             </constraints>
                             <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -153,7 +159,13 @@
                         <constraint firstItem="8oO-ee-ZI0" firstAttribute="centerX" secondItem="Idl-cm-zI8" secondAttribute="centerX" id="SiN-Az-27w"/>
                         <constraint firstItem="kNu-ZC-ivU" firstAttribute="leading" secondItem="LK2-LB-CYB" secondAttribute="leading" id="W6e-Kz-OIg"/>
                         <constraint firstItem="6md-8e-sMA" firstAttribute="width" secondItem="F8Q-8l-XcK" secondAttribute="width" id="WWa-di-2z6"/>
-                        <constraint firstItem="hfT-8E-Vql" firstAttribute="top" secondItem="F8Q-8l-XcK" secondAttribute="bottom" constant="20" id="XIq-Gi-c8F"/>
+                        <constraint firstItem="hfT-8E-Vql" firstAttribute="top" secondItem="F8Q-8l-XcK" secondAttribute="bottom" constant="20" id="XIq-Gi-c8F" customClass="LayoutConstraint" customModule="KanjiRyokucha" customModuleProvider="target">
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="number" keyPath="📱3¨5_const">
+                                    <real key="value" value="15"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
+                        </constraint>
                         <constraint firstItem="F8Q-8l-XcK" firstAttribute="top" secondItem="8oO-ee-ZI0" secondAttribute="top" id="YBb-GU-EOS"/>
                         <constraint firstItem="838-t2-OSa" firstAttribute="top" secondItem="osC-Ij-uPI" secondAttribute="bottom" id="b86-Ea-89D"/>
                         <constraint firstItem="LK2-LB-CYB" firstAttribute="width" secondItem="ZcW-x1-wWF" secondAttribute="width" id="c69-CV-tx3"/>
