--- a/KanjiRyokucha/CardFrontView.xib
+++ b/KanjiRyokucha/CardFrontView.xib
@@ -1,11 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11542" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina3_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -58,11 +58,8 @@
                                 <constraint firstItem="msD-T2-A2u" firstAttribute="top" secondItem="2Uh-bZ-DKM" secondAttribute="top" id="zA7-uN-SYc"/>
                             </constraints>
                         </view>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="bottom" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F0W-Pp-5iX">
-                            <rect key="frame" x="0.0" y="411.5" width="344" height="75"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="75" id="rpT-is-Enw"/>
-                            </constraints>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F0W-Pp-5iX">
+                            <rect key="frame" x="0.0" y="411.5" width="344" height="116.5"/>
                             <fontDescription key="fontDescription" type="system" weight="light" pointSize="35"/>
                             <state key="normal" title="flip">
                                 <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
@@ -106,6 +103,7 @@
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstItem="F0W-Pp-5iX" firstAttribute="leading" secondItem="HfJ-tv-8Sx" secondAttribute="leading" id="6J9-k8-MbX"/>
+                        <constraint firstAttribute="bottom" secondItem="F0W-Pp-5iX" secondAttribute="bottom" id="9hc-7W-P6R"/>
                         <constraint firstItem="PsI-SZ-f41" firstAttribute="width" secondItem="r1J-mA-xvB" secondAttribute="width" id="BEp-js-tfD"/>
                         <constraint firstItem="PsI-SZ-f41" firstAttribute="top" secondItem="r1J-mA-xvB" secondAttribute="top" id="DDy-nj-T2c"/>
                         <constraint firstAttribute="trailing" secondItem="HfJ-tv-8Sx" secondAttribute="trailing" id="FgV-Bq-CZt" customClass="LayoutConstraint" customModule="KanjiRyokucha" customModuleProvider="target">
