--- a/KanjiRyokucha/StudyCell.xib
+++ b/KanjiRyokucha/StudyCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -20,7 +20,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DUy-Ix-sg6">
-                        <rect key="frame" x="16" y="14" width="250" height="46"/>
+                        <rect key="frame" x="16" y="14" width="284" height="46"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="46" id="6wF-Nq-a8F"/>
                         </constraints>
@@ -29,12 +29,13 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rrs-Kp-glC" customClass="KRButton" customModule="KanjiRyokucha" customModuleProvider="target">
-                        <rect key="frame" x="280" y="20" width="84" height="34"/>
+                        <rect key="frame" x="314" y="15" width="50" height="44"/>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="84" id="Vor-UD-egn"/>
+                            <constraint firstAttribute="width" constant="50" id="Vor-UD-egn"/>
+                            <constraint firstAttribute="height" constant="44" id="gw1-lz-mqA"/>
                         </constraints>
-                        <state key="normal" title="learned"/>
+                        <state key="normal" title="✅"/>
                         <connections>
                             <action selector="learnedTapped" destination="KGk-i7-Jjw" eventType="touchUpInside" id="ZNm-Az-vE6"/>
                         </connections>
