--- a/KanjiRyokucha/StudyViewController.xib
+++ b/KanjiRyokucha/StudyViewController.xib
@@ -11,6 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="StudyViewController" customModule="KanjiRyokucha" customModuleProvider="target">
             <connections>
+                <outlet property="refreshButton" destination="2lr-1C-F9K" id="efy-EC-C6L"/>
                 <outlet property="submitButton" destination="F7I-qf-DHb" id="UNh-ST-jeA"/>
                 <outlet property="submitLabel" destination="mgS-kn-x7g" id="5NZ-gQ-Yb9"/>
                 <outlet property="tableView" destination="RMW-l5-m3X" id="kc2-je-Cfm"/>
@@ -48,6 +49,11 @@
                     <color key="textColor" red="0.54094521650000005" green="0.66909365109999996" blue="0.1146249371" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2lr-1C-F9K">
+                    <rect key="frame" x="16" y="20" width="67" height="30"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <state key="normal" title="Refresh"/>
+                </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
