--- a/KanjiRyokucha/StudyCell.xib
+++ b/KanjiRyokucha/StudyCell.xib
@@ -16,7 +16,7 @@
             <rect key="frame" x="0.0" y="0.0" width="372" height="76"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="372" height="75.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="372" height="76"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DUy-Ix-sg6">
@@ -28,14 +28,13 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rrs-Kp-glC" customClass="KRButton" customModule="KanjiRyokucha" customModuleProvider="target">
-                        <rect key="frame" x="314" y="15" width="50" height="44"/>
-                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rrs-Kp-glC">
+                        <rect key="frame" x="314" y="12" width="50" height="50"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="50" id="Vor-UD-egn"/>
-                            <constraint firstAttribute="height" constant="44" id="gw1-lz-mqA"/>
+                            <constraint firstAttribute="height" constant="50" id="gw1-lz-mqA"/>
                         </constraints>
-                        <state key="normal" title="✅"/>
+                        <state key="normal" backgroundImage="circle"/>
                         <connections>
                             <action selector="learnedTapped" destination="KGk-i7-Jjw" eventType="touchUpInside" id="ZNm-Az-vE6"/>
                         </connections>
@@ -56,4 +55,7 @@
             <point key="canvasLocation" x="8" y="70"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="circle" width="36" height="36"/>
+    </resources>
 </document>
