--- a/KanjiRyokucha/StudyCell.xib
+++ b/KanjiRyokucha/StudyCell.xib
@@ -12,24 +12,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="studyCellId" rowHeight="76" id="KGk-i7-Jjw" customClass="StudyCell" customModule="KanjiRyokucha" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="studyCellId" rowHeight="76" id="KGk-i7-Jjw" customClass="StudyCell" customModule="KanjiRyokucha" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="372" height="76"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="372" height="76"/>
+                <rect key="frame" x="0.0" y="0.0" width="339" height="75"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DUy-Ix-sg6">
-                        <rect key="frame" x="16" y="14" width="284" height="46"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="46" id="6wF-Nq-a8F"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rrs-Kp-glC">
-                        <rect key="frame" x="314" y="12" width="50" height="50"/>
+                        <rect key="frame" x="8" y="12" width="50" height="50"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="50" id="Vor-UD-egn"/>
                             <constraint firstAttribute="height" constant="50" id="gw1-lz-mqA"/>
@@ -39,13 +30,22 @@
                             <action selector="learnedTapped" destination="KGk-i7-Jjw" eventType="touchUpInside" id="ZNm-Az-vE6"/>
                         </connections>
                     </button>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DUy-Ix-sg6">
+                        <rect key="frame" x="70" y="14" width="261" height="46"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="46" id="6wF-Nq-a8F"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
                     <constraint firstItem="DUy-Ix-sg6" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="6" id="0l9-VK-9by"/>
-                    <constraint firstItem="Rrs-Kp-glC" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="9Nc-iI-3ni"/>
-                    <constraint firstItem="Rrs-Kp-glC" firstAttribute="leading" secondItem="DUy-Ix-sg6" secondAttribute="trailing" constant="14" id="gPo-m9-MsN"/>
+                    <constraint firstItem="DUy-Ix-sg6" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="70l-mm-aLe"/>
+                    <constraint firstItem="DUy-Ix-sg6" firstAttribute="leading" secondItem="Rrs-Kp-glC" secondAttribute="trailing" constant="12" id="jGE-yZ-Gc4"/>
                     <constraint firstItem="Rrs-Kp-glC" firstAttribute="centerY" secondItem="DUy-Ix-sg6" secondAttribute="centerY" id="pie-9x-CAH"/>
-                    <constraint firstItem="DUy-Ix-sg6" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="8" id="wNB-9K-84j"/>
+                    <constraint firstItem="Rrs-Kp-glC" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="wka-4Q-bqx"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
